Added: external pacakges ... showing how to import them.